welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:10: error: ')' expected but 'return' found.
  if ((a==40) && (b>=30 && b<=50) return true
                                  ^